--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
 Theme Name: Just Pink
-Theme URI: http://tatianeps.com.br/2013/07/just-pink-novo-tema-para-wordpress/
+Theme URI: http://tatianepires.com.br/2013/07/just-pink-novo-tema-para-wordpress/
 Author: Tatiane Pires
-Author URI: http://tatianeps.com.br/
+Author URI: http://tatianepires.com.br/
 Description: Simple pink theme based on Twenty Twelve.
 Template: twentytwelve
-Version: 1.4.2
+Version: 1.4.3
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: pink, white, two-columns, right-sidebar, fixed-width, custom-menu, featured-images, sticky-post
